UF-56: improved archetype and fixing issues related to missing perspectives